CZeroCLM/force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/parent_a1j__c.field-meta.xml
<CustomField>
    <fullName>parent_a1j__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project PS</label>
    <referenceTo>PS_Project__c</referenceTo>
    <relationshipLabel>Conga Sign Transactions</relationshipLabel>
    <relationshipName>Conga_Sign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>