CZeroCLM/force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/parent_a9v__c.field-meta.xml
<CustomField>
    <fullName>parent_a9v__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Addendum</label>
    <referenceTo>Contract_Addendum__c</referenceTo>
    <relationshipLabel>Conga Sign Transactions</relationshipLabel>
    <relationshipName>Conga_Sign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>