CZeroCLM/force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_a9z__c.field-meta.xml
<CustomField>
    <fullName>Parent_a9z__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Conga Sign Transactions</relationshipLabel>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>