CZeroCLM/force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_aCL__c.field-meta.xml
<CustomField>
    <fullName>Parent_aCL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposal</label>
    <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
    <relationshipLabel>Conga Sign Transactions</relationshipLabel>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>