CZeroCLM/force-app/main/default/objects/APXT_CongaSign__Transaction__c/fields/Parent_aRf__c.field-meta.xml
<CustomField>
    <fullName>Parent_aRf__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Agreement</label>
    <referenceTo>APXT_Redlining__Contract_Agreement__c</referenceTo>
    <relationshipLabel>Conga Sign Transactions</relationshipLabel>
    <relationshipName>APXT_CongaSign_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>